* 2013-08-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 27901: Check for null before accessing a supplied parameter 
 
* 2013-07-25 - marcus.klein@open-xchange.com

 - Fix for bug 26607: Optimized JMX queries for certain MBeans using object names and removed multi threading.

* 2013-07-01 - marc.arens@open-xchange.com

 - Fix for bug 26681: Repair broken state in HazelcastResourceDirectory
 - Fix for bug 26470: Repair broken state in HazelcastResourceDirectory

* 2013-06-30 - thorben.betten@open-xchange.com

 - Fix for bug 27292: Check for proper field name on color label update

* 2013-06-27 - marcus.klein@open-xchange.com

 - Fix for bug 27268: Replaced old source code import for XML pull implementation kXML with latest released binary library.

* 2013-06-26 - marc.arens@open-xchange.com

 - Fix for bug 27243: Repair broken state in HazelcastResourceDirectory
 
* 2013-06-26 - marcus.klein@open-xchange.com

 - Fix for bug 25996: Adding property com.openexchange.mail.JavaMailProperties in postinst scripts to mail.properties configuration file.
 - Fix for bug 27265: Added necessary export org.kxml2.wap to org.xmlpull bundle which is needed by EAS implementation.

* 2013-06-26 - thorben.betten@open-xchange.com

 - Fix for bug 27245: Orderly retrieve nested message's source bytes from referenced part

* 2013-06-25 - thorben.betten@open-xchange.com

 - Fix for bug 27230: Don't validate non-rfc822 addresses
 - Fix for bug 27225: Drop superfluous warning on OSGi shutdown
 - Fix for bug 27236: Safely establish multipart part
 - Fix for bug 27237: Added null guard on setting remove attempt

* 2013-06-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 27224: Always consider iCal TRANSPARENCY for appointments without organizer 
 
* 2013-06-24 - marcus.klein@open-xchange.com

 - Fix for bug 25642: Removing old configuration files for mobile web interface.

* 2013-06-24 - thorben.betten@open-xchange.com
